--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-cat <<EOF > index.html
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pixel Explorer</title>
     <style>
-        body { margin: 0; overflow: hidden; background: #1a1a1a; color: white; }
-        canvas { display: block; }
+        body { margin: 0; background: #1a1a1a; overflow: hidden; touch-action: none; }
+        canvas { display: block; background: #000; }
     </style>
 </head>
 <body>
@@ -13,4 +13,3 @@ cat <<EOF > index.html
     <script src="game.js"></script>
 </body>
 </html>
-EOF
